use mboot2 package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [tool.poetry]
 name = "solo"
-version = "0.0.27"
+version = "0.0.28"
 description = ""
 authors = ["SoloKeys <hello@solokeys.com>"]
 readme = "README.md"
@@ -28,8 +28,7 @@ pyserial ="*"
 pyusb ="*"
 requests ="*"
 pyscard="*"
-mboot = {git="https://github.com/conorpp/pyMBoot", branch="master"}
-
+mboot2 = ">=0.3.2"
 
 
 [tool.poetry.scripts]
